fix weird overflow

--- a/css/main2.css
+++ b/css/main2.css
@@ -14,8 +14,8 @@ html{
 	-webkit-font-smoothing: antialiased !important;
     color: var(--secondaryColor);
     font-size: 14px !important;
-    height: 100vh;
-    width: 100%;
+    height: 100vh !important;
+    width: 100% !important;
 }
 
 body {
